Toplevel: not relying on expunche anymore

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -11,6 +11,7 @@ MINIFIER := jsoo_minify$(EXEEXT)
 LINKER   := jsoo_link$(EXEEXT)
 MKTOP    := jsoo_mktop$(EXEEXT)
 MKCMIS   := jsoo_mkcmis$(EXEEXT)
+LISTUNITS := jsoo_listunits$(EXEEXT)
 
 PPX   := ppx_js$(EXEEXT)
 # opt/byte
