--- a/lib/Makefile
+++ b/lib/Makefile
@@ -308,12 +308,6 @@ endif
 ifeq "${WITH_PPX}" "YES"
 	ocamldep -I ppx ppx/ppx_js.ml ppx/ppx_js_bin.ml ppx/ppx_js.mli >> .depend
 endif
-ifeq "${WITH_DERIVING}" "YES"
 	${MAKE} --no-print-directory deriving_json/deriving_Json_lexer.ml
-	ls deriving_json/*.mli deriving_json/*.ml | \
-	  grep -v deriving_Json_stdlib.mli | \
-	  xargs ocamlfind ocamldep -I deriving_json -package deriving.syntax.common -ppopt ${PA_DERIVING} >> .depend
-	@# camlp4 3.12.0 fails on (module type of ...)
-	ocamldep -I deriving_json deriving_json/deriving_Json_stdlib.mli  >> .depend
-endif
+	ocamldep -I deriving_json deriving_json/deriving_Json.ml deriving_json/deriving_Json_lexer.ml{,i} >> .depend
 include .depend
