--- a/.gitignore
+++ b/.gitignore
@@ -46,8 +46,10 @@ compiler/lib/compiler_version.ml
 compiler/man
 jsoo_tools/jsoo_mktop
 jsoo_tools/jsoo_mkcmis
+jsoo_tools/jsoo_listunits
 jsoo_tools/jsoo_mktop.opt
 jsoo_tools/jsoo_mkcmis.opt
+jsoo_tools/jsoo_listunits.opt
 compiler/lib/util.ml
 compiler/lib/annot_lexer.ml
 compiler/lib/annot_parser.ml
