--- a/Makefile.filelist
+++ b/Makefile.filelist
@@ -79,7 +79,7 @@ endif
 
 JSOO_RUNTIME := mlString.js ieee_754.js int64.js md5.js marshal.js \
 	lexing.js parsing.js bigarray.js unix.js \
-	stdlib.js io.js fs.js jslib.js jslib_js_of_ocaml.js \
+	stdlib.js io.js fs.js fs_node.js fs_fake.js jslib.js jslib_js_of_ocaml.js \
 	internalMod.js gc.js polyfill/json2.js bigstring.js
 
 JSOO_RUNTIME_EXTRA := weak.js \
