--- a/js_of_ocaml.opam
+++ b/js_of_ocaml.opam
@@ -21,4 +21,8 @@ depends: [
   "toplevel_expect_test" {test}
 ]
 
+conflicts: [
+  "ppx_tools_versioned"     {(= "5.0alpha"| ="5.0beta0")}
+]
+
 available: [ ocaml-version >= "4.02.0" ]
