--- a/js_of_ocaml-camlp4.opam
+++ b/js_of_ocaml-camlp4.opam
@@ -13,7 +13,7 @@ build: [
 ]
 
 depends: [
-  "jbuilder" {build & >= "1.0+beta3"}
+  "jbuilder" {build}
   "camlp4" {>= "2.4.4"}
 ]
 depopts: ["deriving"]
