--- a/js_of_ocaml-lwt.opam
+++ b/js_of_ocaml-lwt.opam
@@ -13,7 +13,7 @@ build: [
 ]
 
 depends: [
-  "jbuilder" {build & >= "1.0+beta3"}
+  "jbuilder" {build}
   "lwt" {>= "2.4.4"}
   "js_of_ocaml"
   "js_of_ocaml-ppx"
