--- a/js_of_ocaml-ocamlbuild.opam
+++ b/js_of_ocaml-ocamlbuild.opam
@@ -13,7 +13,7 @@ build: [
 ]
 
 depends: [
-  "jbuilder" {build & >= "1.0+beta3"}
+  "jbuilder" {build}
   "ocamlbuild"
 ]
 available: [ ocaml-version >= "4.00.0" ]
