--- a/js_of_ocaml-ppx.opam
+++ b/js_of_ocaml-ppx.opam
@@ -13,7 +13,7 @@ build: [
 ]
 
 depends: [
-  "jbuilder" {build & >= "1.0+beta3"}
+  "jbuilder" {build}
   "ocaml-migrate-parsetree"
   "ppx_tools_versioned"
   "js_of_ocaml"
@@ -22,7 +22,7 @@ depends: [
 depopts: ["ppx_deriving" "ppx_tools"]
 
 conflicts: [
-  "ppx_tools_versioned"     {(= "5.0alpha"& ="5.0beta0")}
+  "ppx_tools_versioned"     {<="5.0beta0"}
 ]
 
 available: [ ocaml-version >= "4.02.0" ]
