--- a/toplevel/examples/lwt_toplevel_lib/ppx_enabled.ml.in
+++ b/toplevel/examples/lwt_toplevel_lib/ppx_enabled.ml.in
@@ -1,5 +1,10 @@
 open Migrate_parsetree
 
-module Converter = Migrate_parsetree.Versions.Convert(OCaml_405)(Migrate_parsetree.Versions.OCaml_current)
-
-let init () = Compiler_libs.Ast_mapper.register "js_of_ocaml" Ppx_js.js_mapper
+let init () =
+  let module Converter =
+    Migrate_parsetree.Versions.Convert
+      (Migrate_parsetree.OCaml_405)
+      (Migrate_parsetree.OCaml_current)
+  in
+  let mapper = Converter.copy_mapper Ppx_js.mapper in
+  Compiler_libs.Ast_mapper.register "js_of_ocaml" (fun _ -> mapper)
