--- a/js_of_ocaml-toplevel.opam
+++ b/js_of_ocaml-toplevel.opam
@@ -6,7 +6,7 @@ homepage:     "http://ocsigen.org/js_of_ocaml"
 dev-repo:     "git+https://github.com/ocsigen/js_of_ocaml.git"
 
 name: "js_of_ocaml-toplevel"
-version: "3.0"
+version: "dev"
 
 build: [["jbuilder" "build" "-p" name "-j" jobs]]
 
