Toplevel: fix build of the toplevel example

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -8,7 +8,7 @@ WITH_TYXML ?= $(shell if [ -f `ocamlfind query tyxml 2> /dev/null`/tyxml_f.cma ]
 
 WITH_LWT?= $(shell if [ -f `ocamlfind query lwt 2> /dev/null`/lwt.cma ]; then echo YES; else echo NO; fi)
 
-WITH_PPX_TOOLS ?= $(shell if [ -f `ocamlfind query ppx_tools 2> /dev/null`/ppx_tools.cma ]; then echo YES; else echo NO; fi)
+WITH_PPX_TOOLS ?= $(shell if [ -f `ocamlfind query ppx_tools_versioned 2> /dev/null`/ppx_tools_versioned.cma ]; then echo YES; else echo NO; fi)
 
 WITH_PPX_DERIVING ?= $(shell if [ -f `ocamlfind query ppx_deriving 2> /dev/null`/ppx_deriving.cma ]; then echo YES; else echo NO; fi)
 
